# kube-vproxy

./: -X  .dockerignore  .gitignore  .gitmodules  Dockerfile  INSTALL.md  Makefile  README.md  TODO.md  TRADEOFFS.md  active_debug.sh  busyV.sh  clean.Dockerfile  cluster_kubeBusyV.docker-compose.yml  cluster_kubeMetrics.docker-compose.yml  cluster_kubeVision.docker-compose.yml  docker-compose.yml  kubeMetrics_local.sh  kubeVision_down_LocalCluster.sh  kubeVision_local.sh  kubeVision_up_LocalCluster.sh  kubeVproxy_local.sh  launch.sh  next.Dockerfile  routes.sh  test.sh  test_middleware.sh  test_route.sh  untitled  upload-local-file.sh  vulcan.docker-compose.yml
Godeps/: Godeps.json
docs/: KUBE-VISION.md  TODO.md  TRADEOFFS.md
kube-benchmarks/: Dockerfile  attack.go  generate_powerball.sh  targets.txt  vegeta.req
kube-dashboards/: package.json
kube-query-expansion/: .dockerignore  README.md  _build-docker.sh  _build_local.sh  _old.sh  _run_local.sh  go-build  main.go  main.initial.go  osx.sh  scratch.Dockerfile
kube-templates/: kibana-dashboard.json  svc_kube_aws-billing-es-template.json
svc_kube_gateway_proxy/: Dockerfile
svc_kube_knowledge_aida/: README.md  fetch_entities.sh
svc_kube_metrics_forwarder/: config.json
svc_kube_metrics_kibana/: entrypoint.sh
svc_kube_scripts/: kube_billing_aws.sh
svc_kube_storage_visuallogger/: Dockerfile  Dockerfile.dev  Makefile  config.json
svc_kube_vision_jones/: Dockerfile
svc_kube_vision_logos/: CMakeLists.txt  README.md  Version.h.in  test_services.sh
svc_kube_vision_logos/include/: CMakeCache.txt  CMakeLists.txt
svc_kube_vision_logos/include/find_object/: DetectionInfo.h  FindObject.h  QtOpenCV.h  Settings.h
svc_kube_vision_logos/include/find_object/utilite/: UMutex.h
svc_kube_vision_ltu763/: Dockerfile  README.md  _build_launch_container.sh  _launch_container.sh
svc_kube_vision_opencv_libccv/: Dockerfile  make_ccv.sh
svc_kube_vision_opencv_nonfree/: Dockerfile
svc_kube_vision_opencv_plus/: README.md
svc_kube_vision_opencv_plus/src/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  FindObject.cpp  JsonWriter.cpp  KeypointItem.cpp  KeypointItem.h  RectItem.cpp  RectItem.h  Settings.cpp  Vocabulary.cpp
svc_kube_vision_opencv_plus/src/ui/: aboutDialog.ui
svc_kube_vision_opencv_plus/src/utilite/: UDirectory.cpp  UFile.h
svc_kube_vision_opencvplus/: .dockerignore  CMakeLists.txt  Dockerfile  build.sh  docker-env.sh  (+4 more)
(+703 files in other folders)
